# workflow-orchestration-queue-echo33-a

./: .ai-repository-summary.md  .assembled-orchestrator-prompt.md  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  VERIFICATION_REPORT.md  docker-compose.yml  pyproject.toml  run_opencode_prompt.sh  workflow-orchestration-queue-echo33-a.code-workspace
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
debrief-and-document/: epic-0.1.2-debrief-report.md  epic-0.3-debrief.md  epic-9-devcontainer-init-debrief.md  report.md  trace-epic-0.3.md  trace-epic-9.md  trace.md
docs/: implementation-plan.md  local-orchestration-quickstart.md  new_features.md
docs/.archived/: non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md
docs/debrief/: epic-1.1-debrief.md  epic-1.1-trace.md
docs/debriefs/: epic-0.1.1-debrief.md  epic-0.1.1-trace.md
local_ai_instruction_modules/: ai-dynamic-workflows.md  ai-workflow-assignments.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
scripts/: update-remote-indices.ps1
src/orchestration_queue/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/orchestration_queue/config/: __init__.py  exceptions.py  settings.py  validators.py
src/orchestration_queue/models/: __init__.py  github_events.py  work_item.py
src/orchestration_queue/queue/: __init__.py  github_queue.py
test/: test-devcontainer-build.sh  test-devcontainer-resources.sh  test-opencode-run.sh
tests/: __init__.py  conftest.py
tests/test_config/: test_settings.py  test_startup.py  test_validators.py
tests/unit/: test_github_events.py  test_github_queue.py  test_orchestrator_sentinel.py  test_work_item.py
